<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hrylab.xjtu.wifip2papp.MainActivity" >

    <TextView
        android:id="@+id/text_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_me"
        android:visibility="visible"
        android:background="#666"
        android:textColor="#fff"
        android:paddingLeft="5dp" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_blue_light" />
    
    <!-- self information -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:padding="3dip">
        <ImageView 
            android:id="@+id/image_machine"
            android:src="@drawable/machine"
            android:contentDescription="@null" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxWidth="40dp"
            android:maxHeight="40dp"
            android:layout_marginRight="2dp"/>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">
            <TextView 
                android:id="@+id/text_selfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_gravity="center_vertical"/>
            <TextView 
                android:id="@+id/text_selfStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"/>
        </LinearLayout>  
        
        <TextView 
            android:id="@+id/text_selfRole"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
                
        <Button 
             android:id="@+id/button_connect"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_connect"
            android:visibility="gone"/>
        <Button 
            android:id="@+id/button_disconnect"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_cancelConnected"
            android:textSize="12sp"
            android:visibility="gone"/>
                
	</LinearLayout>
	<View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_blue_light" /> 
    
	 <Button 
     	android:id="@+id/button_setServer"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_setServer"
        android:visibility="visible" />
	<Button 
     	android:id="@+id/button_startScan"
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_startScan"
        android:visibility="visible"/>
	<TextView 
	    android:id="@+id/text_selfInfo"
	     android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:singleLine="false"
        android:maxLines="15"
        android:scrollbars="vertical"/>
	<Button 
	    android:id="@+id/button_updateUI"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"	    
	    android:layout_gravity="center|bottom"
	    android:layout_marginBottom="5dp"
	    android:text="@string/button_updateUI"/>
	
	<Button 
	    android:id="@+id/button_dataTest"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"	    
	    android:layout_gravity="center|bottom"
	    android:layout_marginBottom="5dp"
	    android:text="@string/button_dataTest"/>
	
</LinearLayout>
